# MathIsland

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  p
include/: greeting.h
src/: greeting.cpp
